2016-02-25 Robert Heel <typo3@bobosch.de>
	* Bugfix: Compatibility to TYPO3 7 (Thanks to Gerald Loß).

2016-02-24 Robert Heel <typo3@bobosch.de>
	* Bugfix: Add flexform data move to new update script.

2016-01-07 Robert Heel <typo3@bobosch.de>
	* Security fix: Hash the one time code.

2016-01-07 Robert Heel <typo3@bobosch.de>
	* Security fix: one time authorisation links.
	* Update: documentation.

2015-12-12 Robert Heel <typo3@bobosch.de>
	* Change: John.Doe@example.com translation.
	* Security fix: Expiration of authorisation links (TS option authcode_expiration_time = 60 minutes).

2015-11-20 Robert Heel <typo3@bobosch.de>
	* Security fix: Use GET params instead of a session.

2015-04-23 Robert Heel <typo3@bobosch.de>
	* Add: Hebrew FE translation (Thanks to Oleg Sverdlov).

2014-11-16 Robert Heel <typo3@bobosch.de>
	* Bugfix: Compatibility to TYPO3 6.2.

2014-11-03 Robert Heel <typo3@bobosch.de>
	* Feature #62639: Multiple email addresses for confirmation.
	* Feature #55478: Direct unsubscribe link.

2013-03-07 Robert Heel <typo3@bobosch.de>
	* Bug #43443: Replaced unsupported \TYPO3\CMS\Core\Utility.

2013-02-09 Robert Heel <typo3@bobosch.de>
	* Bug #43443: Replaced deprecated method readLLXMLfile (Thanks to Sebastian Steinmetz).
	* Bug #45269: Add language to ###LINK### (Thanks to wagner).

2012-10-14 Robert Heel <typo3@bobosch.de>
	* Bug #40907: User attributes are escaped twice (Thanks to Andy).

2012-08-28 Robert Heel <typo3@bobosch.de>
	* Bug #40289: Escape strings in SQL and HTML (Thanks to Andreas Heling).

2012-08-22 Robert Heel <typo3@bobosch.de>
	* Bugfix: Always use "setBody" to add email part (Thanks to Robert Steindl).

2012-07-20 Robert Heel <rheel@1drop.de>
	* Add: TS option for required fields.

2012-06-05 Robert Heel <rheel@1drop.de>
	* Bugfix: Ignore empty email address.

2012-05-25 Robert Heel <rheel@1drop.de>
	* Bug #36899: Using t3lib_mail_message instead of t3lib_htmlmail for TYPO3 4.7 compatibility (Thanks to Loek Hilgersom).