@@ -16,8 +16,10 @@
 							<config>
 								<type>group</type>
 								<internal_type>db</internal_type>
-								<allowed>sys_dmail_category,sys_dmail_group,fe_groups,tt_address_group</allowed>
+								<allowed>sys_dmail_category,sys_dmail_group,fe_groups,sys_category</allowed>
 								<size>3</size>
+								<minitems>0</minitems>
+								<maxitems>10</maxitems>
 								<show_thumbs>1</show_thumbs>
 							</config>
 						</TCEforms>
