@@ -1,3 +1,6 @@
+2016-04-29 Robert Heel <typo3@bobosch.de>
+	* Bug #75944: Use sys_category instead of tt_address_group.
+
 2016-02-25 Robert Heel <typo3@bobosch.de>
 	* Bugfix: Compatibility to TYPO3 7 (Thanks to Gerald Loß).
 
